--- a/index.html
+++ b/index.html
@@ -17,14 +17,18 @@
     <script src="js/arf.js"></script>
 
     <h3>About this</h3>
-    I built this mindmap based on OSINT - Framework but focusing in CTI (Cyber Threat Intelligence) frameworks, platforms, tools and methodologies <br>
+    I built this mindmap based on <a href="https://osintframework.com">OSINT - Framework</a> focusing CTI (Cyber Threat Intelligence) frameworks, platforms, tools and methodologies.
 
-    <h3>Requesting Updates</h3>
-    Follow me on Twitter: <a href="https://twitter.com/psycode777">@Daniel</a><br>
-    If you are brave enough, fork the project on <a href="https://github.com/danieljs777/cti-framework">Github</a> and edit the json file and submit a Pull Request.
+    <br>
+
+    There is free and commercial tools, so navigate deep into you need and if you don't find something you believe it worth be here, please follow instructions below.
 
     <h3>Suggestions, Comments, Feedback</h3>
     Feedback or new tool suggestions are extremely welcome!
+
+    <h3>Requesting Updates</h3>
+    
+    If you are brave enough, fork the project on <a href="https://github.com/danieljs777/cti-framework">Github</a> and edit the json file and submit a Pull Request. Otherwise, you can open an issue on the github page. ;-)
 
 
     <!-- <div class="legend"><p>(T) - Indicates a link to a tool that must be installed and run locally<br>
