--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="js/arf.js"></script>
 
     <h3>About this</h3>
-    I built this mindmap based on <a href="https://osintframework.com">OSINT - Framework</a> focusing CTI (Cyber Threat Intelligence) frameworks, platforms, tools and methodologies.
+    I built this mindmap based on <a href="https://osintframework.com">OSINT - Framework</a> focusing CTI (Cyber Threat Intelligence) frameworks, platforms, tools, methodologies and all kind of information about it.
 
     <br>
 
