--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <h3>Requesting Updates</h3>
     
-    If you are brave enough, fork the project on <a href="https://github.com/danieljs777/cti-framework">Github</a> and edit the json file and submit a Pull Request. Otherwise, you can open an issue on the github page. ;-)
+    If you are brave enough, fork the project on <a href="https://github.com/cti-lib/cti-lib.github.io">Github</a> and edit the json file and submit a Pull Request. Otherwise, you can open an issue on the github page. ;-)
 
 
     <!-- <div class="legend"><p>(T) - Indicates a link to a tool that must be installed and run locally<br>
